##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-12-05	tboggs <tboggs@users.sourceforge.net>

    Performance improvements.

    * algorithms/classifiers.py:
      (Classifier): Converted to new-style class (derived from `object`).
      (Classifier.cache_class_scores): Class attribute that indicates whether
      to compute classifier scores for each class for the entire image and
      cache the result prior to selecting the best match. This can yield big
      speed improvements but could cause problems on systems with lower RAM.
      (MahalanobisDistanceClassifier.classify_image): Overloading base class
      method to use `RX` class to compute result. Over 7x speedup.
    * algorithms/clustering.py (kmeans_ndarray): Up to 3x speedup using einsum.

    Added `figsize` argument to imshow.

    * graphics/spypylab (imshow): Accept figsize arg.

    Fixed error when bands not specified in `imshow` and incorrect handling of
    `stretch_all` keyword to get_rgb).

    * graphics/__init__.py: Import ImageView from spypylab
    * graphics/graphics.py(get_rgb): Corrected handling of `stretch_all`
      kwarg (was stretching when strech_all was provided but False (or 0)).
    * graphics/spypylab:
      (ImageView.set_data):
      - Separate get_rgb and mpl.imshow keywords.
      - Avoid exception when bands not specified.
      (ImageView.set_classes): Filter get_rgb keywords.
      (imshow):
      - Make `colors` a positional argument.
      - Simplified setup of ImageView object.

2013-12-05	tboggs <tboggs@users.sourceforge.net>

    Provide settings for spectral.imshow windows.

    * spectral.py (SpySettings):
      - Converted attributes to class attributes
      - Added imshow settings

    Disable matplotlib key event handlers that conflict with SPy handlers.